[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Stages/stage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/gf.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Characters/bf.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Options/RatingOffsetMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/soundTest.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Options/RatingExample.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 7 )

[node name="RatingOffsetMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="stage" parent="." instance=ExtResource( 1 )]

[node name="gf" parent="." instance=ExtResource( 2 )]
position = Vector2( 504, 768 )

[node name="bf" parent="." instance=ExtResource( 3 )]
position = Vector2( 848, 828 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 568, 468 )
current = true
zoom = Vector2( 1.1, 1.1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="RatingExample" parent="hud" instance=ExtResource( 6 )]
position = Vector2( 654, 237 )

[node name="TabNotif" type="ColorRect" parent="hud"]
margin_right = 1280.0
margin_bottom = 78.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Label" type="Label" parent="hud/TabNotif"]
margin_top = 11.0
margin_right = 1280.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Press TAB to switch between Rating/Combo
Press LEFT and RIGHT to change the offset."
align = 1

[node name="Label2" type="Label" parent="hud/TabNotif"]
margin_left = -16.0
margin_top = 11.0
margin_right = 1264.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Rating"
align = 2

[node name="Label3" type="Label" parent="hud/TabNotif"]
margin_left = -16.0
margin_top = 91.0
margin_right = 1264.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "Rating Offset: [0, 0]
Combo Offset: [0, 0]"
align = 2
